networking/ingress-rules.yaml

#
# Deploy the ingress rules for the Default Namespace.
#

# ------------------- HTTPS Ingress (NGINX) ------------------- #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ingress-rules"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: lets-encrypt
spec:
  tls:
  - hosts:
      # !CHANGE THIS! To match your real DNS name.
    - domain.co.uk
    secretName: tls-secret
  rules:
          # !CHANGE THIS! To match your real DNS name.
  - host: domain.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-svc
          servicePort: 80
  - host: domain.co.uk
    http:
      paths:
      - path: /api
        backend:
          serviceName: api-svc
          servicePort: 80
